--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "font-awesome": "4.7.0",
     "owl.carousel": "^2.3.4",
     "animate.css": "^3.7.0",
-    "jquery-lazy": "^1.7.10"
+    "jquery-lazy": "^1.7.10",
+    "QueryLoader2": "queryloader2#^3.2.0"
   }
 }
