--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "owl.carousel": "^2.3.4",
     "animate.css": "^3.7.0",
     "jquery-lazy": "^1.7.10",
-    "QueryLoader2": "queryloader2#^3.2.0"
+    "QueryLoader2": "queryloader2#^3.2.0",
+    "vide": "^0.5.1"
   }
 }
