--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2",
     "gulp-uglify-es": "^1.0.4",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "tilt.js": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
